# syntx

./: .env.example  .gitignore  README.md  docker-compose.yml  project-overview.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 01b8dcbd6568_create_user_settings_table.py  04c0dfeb8fa0_create_users_table.py  14eb2acce60f_create_projects_table.py  2026_04_21_1248-fc39cc8e8406_add_users_table.py  2026_04_21_1251-28fefa114eaa_add_users_table.py  2026_04_21_1727-8199c47bdb68_add_projects_table.py  2026_04_21_1800-c5e2af913b77_add_files_table.py  2026_04_24_1000-a91f4b2c0e91_add_chat_tables.py  2026_05_11_1200-7e1c4d9a8b2f_add_file_chunks_table.py  2026_05_11_1400-9c4e8a7b3f5d_add_project_snapshots.py  d1392770800c_initialize_alembic.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  budget.py  context.py  context_engine.py  ollama.py  prompt_builder.py  rag.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/core/: __init__.py  config.py  constants.py  metrics.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/repositories/: __init__.py  chat.py  file.py  project.py  user.py
backend/app/schemas/: __init__.py  ai.py  auth.py  chat.py  file.py  git.py  metrics.py  project.py  search.py  settings.py  user.py
backend/app/services/: __init__.py  auth_service.py  chat.py  embeddings.py  export_import.py  file.py  git.py  project.py  project_service.py  search.py  settings_service.py  user.py  (+2 more)
(+282 files in other folders)
