[project]
name = "syntx-backend"
version = "1.0.0"
description = "Syntx — AI Coding Workspace backend (FastAPI)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary — academic use" }
authors = [{ name = "George Panfil" }]

dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
  "pydantic-settings>=2.6,<3",
  "sqlalchemy[asyncio]>=2.0,<3",
  "asyncpg>=0.30,<0.31",
  "alembic>=1.14,<2",
  "bcrypt>=4.2,<5",
  "email-validator>=2.2,<3",
  "pyjwt>=2.10,<3",
  "python-multipart>=0.0.12,<0.1",
  "httpx>=0.27,<0.28",
  "pgvector>=0.3,<0.4",
]

[project.optional-dependencies]
# Installed in the dev image and in local virtualenvs; omitted from prod.
dev = [
  "ruff>=0.6,<0.7",
  "pytest>=8.3,<9",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ---- Ruff ----------------------------------------------------------------
# Formatter + linter in one. Config kept minimal; we tune as patterns emerge.
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# ---- Pytest --------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
